Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111213

FFmpeg: Audio stream from one device to another

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.1
    • 6.5, 6.6
    • Multimedia
    • None
    • All
    • 98347e9fd (dev), 8b370c374 (6.5)

      It seems that streaming sound from chosen audioInput to chosen audioOutput using CaptureSession does not work with FFmpeg. Probably implementation is missing.

      You can use the example from QTBUG-109659 to reproduce.

        For Gerrit Dashboard: QTBUG-111213
        # Subject Branch Project Status CR V

            artemiy Artem Dyomin
            bartlomiejmoskal Bartlomiej Moskal
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes