Implement streaming audio input to output through ffmpeg capture session

The use case: a user sets QAudioInput and QAudioOutput to
QMediaCaptureSession, the audio stream from the input is
directed to the output.

Probably, the implementation will need some improvements, but,
in general, it has been done in the commit.

Task-number: QTBUG-111213
Change-Id: I70502fb38a297a56f030e7722f0a8d58c870903f
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 98347e9fd38fada7c681671d629d912de53b7c6d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>